welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
if (estFaceMur()&&getDirection()=Direction.EST) 
                ^SnakeBuggle:16: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (estFaceMur()&&getDirection()=Direction.OUEST) 
                        ^